--- a/ms_transformer_seq2seq.ipynb
+++ b/ms_transformer_seq2seq.ipynb
@@ -11,8 +11,7 @@
     "\n",
     "import torch\n",
     "import pandas as pd\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "from tqdm.notebook import tqdm"
+    "from sklearn.preprocessing import LabelEncoder"
    ]
   },
   {
@@ -70,21 +69,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1136/2621324627.py:1: DtypeWarning: Columns (6,7,10,12) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv('data/MoNA/in-silico.csv')\n"
+      "/tmp/ipykernel_30323/3583281888.py:1: DtypeWarning: Columns (7,8,11,13) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv('data/MoNA/in-silico-SMILES.csv')\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1844352, 17)\n"
+      "Original shape: (1837926, 18)\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv('data/MoNA/in-silico.csv') \n",
-    "print(df.shape)"
+    "df = pd.read_csv('data/MoNA/in-silico-SMILES.csv') \n",
+    "print(f\"Original shape: {df.shape}\")"
    ]
   },
   {
@@ -93,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "methods = ['direct', 'wavelet2']"
+    "method='direct'"
    ]
   },
   {
@@ -118,7 +117,7 @@
     {
      "data": {
       "text/plain": [
-       "(19868,)"
+       "(19867,)"
       ]
      },
      "execution_count": 7,
@@ -132,145 +131,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Training with direct tokenization:\n",
-      "Sample shape: torch.Size([32, 1, 221, 16])\n",
-      "Resuming from checkpoint: checkpoint_epoch_21.pth\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e4b9359bbc544c98bdfeffc2f53fc43",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Epoch 22/50 [Train]:   0%|          | 0/57636 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "053b6e04a2bf4072b66fa3637a9bc24c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Epoch 23/50 [Train]:   0%|          | 0/57636 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86facc0b592948c198f32df3ea55471f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Epoch 24/50 [Train]:   0%|          | 0/57636 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e190665ecf04aff9630308c1e30ac41",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Epoch 25/50 [Train]:   0%|          | 0/57636 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed86857fc0ef4b69b62773e40f166fcf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Epoch 26/50 [Train]:   0%|          | 0/57636 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 20\u001b[0m\n\u001b[1;32m     17\u001b[0m optimizer \u001b[38;5;241m=\u001b[39m optim\u001b[38;5;241m.\u001b[39mAdam(model\u001b[38;5;241m.\u001b[39mparameters(), lr\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.0001\u001b[39m)\n\u001b[1;32m     18\u001b[0m criterion \u001b[38;5;241m=\u001b[39m nn\u001b[38;5;241m.\u001b[39mCrossEntropyLoss()\n\u001b[0;32m---> 20\u001b[0m model, history \u001b[38;5;241m=\u001b[39m \u001b[43mtrain_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     21\u001b[0m \u001b[43m                             \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcriterion\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     22\u001b[0m \u001b[43m                             \u001b[49m\u001b[43mevaluate\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mverbose\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     23\u001b[0m \u001b[43m                             \u001b[49m\u001b[43mcheckpoint_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m./model_checkpoints/\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     24\u001b[0m \u001b[43m                             \u001b[49m\u001b[43mfrom_checkpoint\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcheckpoint_1\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     25\u001b[0m \u001b[43m                             \u001b[49m\u001b[43mmeta_tag\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmethod\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;66;03m# Final eval\u001b[39;00m\n\u001b[1;32m     28\u001b[0m model\u001b[38;5;241m.\u001b[39meval()\n",
-      "File \u001b[0;32m/mnt/d/School/Research/SMART/Summer 24/MS-FTIR-Transfer/transformer_funcs.py:224\u001b[0m, in \u001b[0;36mtrain_model\u001b[0;34m(model, train_loader, test_loader, optimizer, criterion, num_epochs, evaluate, verbose, checkpoint_path, from_checkpoint, meta_tag)\u001b[0m\n\u001b[1;32m    221\u001b[0m loss\u001b[38;5;241m.\u001b[39mbackward()\n\u001b[1;32m    222\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mstep()\n\u001b[0;32m--> 224\u001b[0m total_loss \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitem\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    226\u001b[0m \u001b[38;5;66;03m# Update progress bar description with current loss if verbose\u001b[39;00m\n\u001b[1;32m    227\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m verbose \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "results = {}\n",
-    "method = methods[0]\n",
-    "print(f\"\\nTraining with {method} tokenization:\")\n",
-    "\n",
-    "train_loader, test_loader = load_tokenized_data(X_train, y_train, \n",
-    "                                                X_test, y_test, \n",
-    "                                                method)\n",
-    "\n",
-    "# sample batch used for input dimensions\n",
-    "sample_batch, _ = next(iter(train_loader))\n",
-    "print(\"Sample shape:\", sample_batch.shape)\n",
-    "\n",
-    "num_classes = len(label_encoder.classes_)\n",
-    "embed_depth = sample_batch.shape[3]\n",
-    "\n",
-    "model = MS_VIT(num_classes, embed_depth).to(device)\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.0001)\n",
-    "criterion = nn.CrossEntropyLoss()\n",
-    "\n",
-    "model, history = train_model(model, train_loader, test_loader, \n",
-    "                             optimizer, criterion, \n",
-    "                             evaluate=False, verbose=1,\n",
-    "                             checkpoint_path=\"./model_checkpoints/\",\n",
-    "                             from_checkpoint=\"checkpoint_1\",\n",
-    "                             meta_tag=method)\n",
-    "\n",
-    "# Final eval\n",
-    "model.eval()\n",
-    "correct = 0\n",
-    "total = 0\n",
-    "with torch.no_grad():\n",
-    "    for x_batch, y_batch in test_loader:\n",
-    "        x_batch, y_batch = x_batch.to(device), y_batch.to(device)\n",
-    "        x_batch = x_batch.squeeze(1)\n",
-    "        outputs = model(x_batch)\n",
-    "        _, predicted = torch.max(outputs.data, 1)\n",
-    "        total += y_batch.size(0)\n",
-    "        correct += (predicted == y_batch).sum().item()\n",
-    "        \n",
-    "accuracy = correct / total\n",
-    "results[method] = accuracy\n",
-    "print(f\"Final accuracy with {method} tokenization: {accuracy:.4f}\")"
+    "smiles_vocabs = get_or_create_smiles_vocabs(df)"
    ]
   },
   {
@@ -280,46 +145,94 @@
    "outputs": [],
    "source": [
     "results = {}\n",
-    "method = methods[1]\n",
-    "print(f\"\\nTraining with {method} tokenization:\")\n",
+    "print(f\"\\nSpectra tokenized with {method} tokenization:\")\n",
+    "print(f\"\\nSMILES tokenized with {'character'} tokenization\")\n",
+    "smiles_vocab = smiles_vocabs['character']\n",
     "\n",
-    "train_loader, test_loader = load_tokenized_data(X_train, y_train, \n",
-    "                                                X_test, y_test, \n",
-    "                                                method)\n",
+    "train_loader, test_loader = load_tokenized_data_with_smiles(X_train, y_train, \n",
+    "                                                            X_test, y_test, \n",
+    "                                                            method, \n",
+    "                                                            smiles_vocab, \n",
+    "                                                            max_mz=max_mz)\n",
+    "\n",
+    "#num_classes = len(label_encoder.classes_)\n",
+    "smiles_vocab_size = len(smiles_vocab)\n",
     "\n",
     "# sample batch used for input dimensions\n",
     "sample_batch, _ = next(iter(train_loader))\n",
     "print(\"Sample shape:\", sample_batch.shape)\n",
-    "\n",
-    "num_classes = len(label_encoder.classes_)\n",
-    "embed_depth = sample_batch.shape[3]\n",
-    "\n",
-    "model = MS_VIT(num_classes, embed_depth).to(device)\n",
+    "embed_depth = sample_batch.shape[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = MS_VIT_Seq2Seq(\n",
+    "    smiles_vocab_size=len(smiles_vocab),\n",
+    "    embed_depth=embed_depth,\n",
+    "    d_model=64,           # Reduced from 256\n",
+    "    nhead=4,              # Reduced from 8\n",
+    "    num_layers=2,         # Reduced from 6\n",
+    "    dim_feedforward=256,  # Reduced from 2048\n",
+    "    dropout=0.1,\n",
+    "    num_classes=None\n",
+    ")\n",
+    "print(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "optimizer = optim.Adam(model.parameters(), lr=0.0001)\n",
-    "criterion = nn.CrossEntropyLoss()\n",
+    "criterion_cls = nn.CrossEntropyLoss()\n",
+    "criterion_seq = nn.CrossEntropyLoss(ignore_index=smiles_vocab['<pad>'])\n",
     "\n",
-    "model, history = train_model(model, train_loader, test_loader, \n",
-    "                                optimizer, criterion, \n",
-    "                                evaluate=False, verbose=1,\n",
-    "                                checkpoint_path=\"./model_checkpoints/\",\n",
-    "                                meta_tag=method)\n",
+    "model, history = train_model_seq2seq(model, train_loader, test_loader, \n",
+    "                                     optimizer, criterion_seq, \n",
+    "                                     num_epochs=50, evaluate=True, verbose=1,\n",
+    "                                     checkpoint_path=\"./model_checkpoints/\",\n",
+    "                                     meta_tag=(method+\"_character\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cls_accuracy, seq_accuracy = evaluate_model_seq2seq(model, test_loader, smiles_vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualize training history\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Final eval\n",
-    "model.eval()\n",
-    "correct = 0\n",
-    "total = 0\n",
-    "with torch.no_grad():\n",
-    "    for x_batch, y_batch in test_loader:\n",
-    "        x_batch, y_batch = x_batch.to(device), y_batch.to(device)\n",
-    "        x_batch = x_batch.squeeze(1)\n",
-    "        outputs = model(x_batch)\n",
-    "        _, predicted = torch.max(outputs.data, 1)\n",
-    "        total += y_batch.size(0)\n",
-    "        correct += (predicted == y_batch).sum().item()\n",
-    "        \n",
-    "accuracy = correct / total\n",
-    "results[method] = accuracy\n",
-    "print(f\"Final accuracy with {method} tokenization: {accuracy:.4f}\")"
+    "plt.figure(figsize=(12, 4))\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.plot(history['seq_loss'].values(), label='Sequence Loss')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.plot(history['seq_accuracy'].values(), label='Sequence Accuracy')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Accuracy')\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   }
  ],
