--- a/ms_seq2seq_train.ipynb
+++ b/ms_seq2seq_train.ipynb
@@ -6,12 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ms_data_funcs import *\n",
-    "from transformer_funcs import *\n",
-    "\n",
     "import torch\n",
+    "from torch import nn, optim\n",
     "import pandas as pd\n",
-    "from sklearn.preprocessing import LabelEncoder"
+    "\n",
+    "from transformer.ms_data_funcs import calculate_max_mz\n",
+    "from transformer.transformer_utils import get_or_create_smiles_vocabs, load_tokenized_data_with_smiles\n",
+    "from transformer.sequence_pred import MS_VIT_Seq2Seq, train_model_seq2seq\n",
+    "from transformer.evaluation import evaluate_model_seq2seq, plot_training_history"
    ]
   },
   {
